# MastersThesis

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  cli.py  config.py  io.py  linalg.py  mappings.py  plotting.py  posterior.py  priors.py  truncation.py  var.py
src/stan/: multiplicative_gamma_extended.stan  multiplicative_gamma_original.stan
tests/: test_mappings.py  test_posterior.py  test_truncation.py
